# cmake-init-multi-target

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake.in  install-rules.cmake  variables.cmake
include/multi-target/: multi-target.hpp
include/private/: dependency.hpp
source/: dependency.cpp  multi-target.cpp
test/: CMakeLists.txt
test/source/: multi-target_test.cpp
